chore: lint-staged에 prettier --write명령어 추가

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "npm run lint"
+    "*.{js,jsx,ts,tsx}": [
+      "npm run lint",
+      "prettier --write"
+    ]
   }
 }
