--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "eslint.enable": true,
   "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit",
     "source.addMissingImports": "explicit"
   },
   // 파일을 저장할 때마다 포맷팅 실행
