feat: 테스트 AI 응답 적용 및 교열 문장 표시

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@google/genai": "^0.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@tanstack/react-query": "^5.72.2",
@@ -17,6 +18,7 @@
     "husky": "^9.1.7",
     "jsonwebtoken": "^9.0.2",
     "lint-staged": "^15.5.0",
+    "mime": "^4.0.7",
     "next": "15.2.4",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
@@ -32,7 +34,7 @@
     "@eslint/eslintrc": "^3",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
-    "@types/node": "^20",
+    "@types/node": "^20.17.47",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
