--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
+    "rich-textarea": "^0.26.4",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
