--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@google/genai": "^0.14.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tanstack/react-query": "^5.72.2",
     "bcrypt": "^5.1.1",
     "husky": "^9.1.7",
@@ -27,6 +28,7 @@
     "react-icons": "^5.5.0",
     "recharts": "^2.15.3",
     "rich-textarea": "^0.26.4",
+    "stripe": "^18.2.0",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
